--- a/consul/consul-server.yaml
+++ b/consul/consul-server.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: build-robot
+  name: consul-k8s-sa
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -13,7 +13,7 @@ roleRef:
   name: view
 subjects:
 - kind: ServiceAccount
-  name: build-robot
+  name: consul-k8s-sa
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -33,7 +33,7 @@ spec:
         app: consul
         component: server
     spec:
-      serviceAccountName: build-robot
+      serviceAccountName: consul-k8s-sa
       containers:
       - name: consul
         image: consul:1.2.3
