--- a/wordpress/mysql-statefulset.yaml
+++ b/wordpress/mysql-statefulset.yaml
@@ -40,7 +40,7 @@ spec:
       labels:
         app: mysql
     spec:
-      serviceAccountName: build-robot
+      serviceAccountName: consul-k8s-sa
       initContainers:
       - name: init-mysql
         image: mysql:5.6
